tests/baselines/reference/collisionThisExpressionAndPropertyNameAsConstuctorParameter(strict=true).errors.txt
collisionThisExpressionAndPropertyNameAsConstuctorParameter.ts(4,20): error TS7006: Parameter 'x' implicitly has an 'any' type.
collisionThisExpressionAndPropertyNameAsConstuctorParameter.ts(12,20): error TS7006: Parameter 'x' implicitly has an 'any' type.
collisionThisExpressionAndPropertyNameAsConstuctorParameter.ts(22,20): error TS7006: Parameter 'x' implicitly has an 'any' type.
collisionThisExpressionAndPropertyNameAsConstuctorParameter.ts(32,20): error TS7006: Parameter 'x' implicitly has an 'any' type.


==== collisionThisExpressionAndPropertyNameAsConstuctorParameter.ts (4 errors) ====
    class Foo2 {
        constructor(_this: number) { //Error
            var lambda = () => {
                return x => this;   // New scope.  So should inject new _this capture
                       ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
            }
        }
    }
    
    class Foo3 {
        constructor(private _this: number) { // Error
            var lambda = () => {
                return x => this;   // New scope.  So should inject new _this capture
                       ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
            }
        }
    }   
    
    class Foo4 {
        constructor(_this: number); // No code gen - no error
        constructor(_this: string); // No code gen - no error
        constructor(_this: any) { // Error
            var lambda = () => {
                return x => this;   // New scope.  So should inject new _this capture
                       ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
            }
        }
    }  
    
    class Foo5 {
        constructor(_this: number); // No code gen - no error
        constructor(_this: string); // No code gen - no error
        constructor(private _this: any) { // Error
            var lambda = () => {
                return x => this;   // New scope.  So should inject new _this capture
                       ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
            }
        }
    }  